--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,28 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/welcome_text"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/deal_button"
-        android:text="@string/deal_button"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="25dp"
+        android:id="@+id/button_hit"
+        android:text="@string/hit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        />
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp" />
+
+    <Button
+        android:text="@string/stand"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_hit"
+        android:layout_alignLeft="@+id/button_hit"
+        android:layout_alignStart="@+id/button_hit"
+        android:id="@+id/button_stand" />
 
 </RelativeLayout>
