--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,7 @@
         android:text="@string/welcome_text"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_row="1"
-        android:layour_column="1"/>
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -27,9 +25,7 @@
         android:ems="10"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:id="@+id/playerValue"
-        android:layout_row="2"
-        android:layour_column="1"/>
+        android:id="@+id/playerValue" />
 
 
     <Button
