--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,23 +18,22 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/playerValue" />
-
+    <!--<EditText-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:inputType="textPersonName"-->
+        <!--android:ems="10"-->
+        <!--android:layout_below="@+id/textView"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:id="@+id/playerValue" />-->
 
     <Button
-        android:id="@+id/button_hit"
+        android:id="@+id/buttonHit"
         android:text="@string/hit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:onClick="buttonHit"
+        android:onClick="buttonHit (MainActivity)"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="38dp" />
@@ -43,12 +42,47 @@
         android:text="@string/stand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button_hit"
-        android:layout_alignLeft="@+id/button_hit"
-        android:layout_alignStart="@+id/button_hit"
-        android:id="@+id/button_stand"
+        android:layout_below="@+id/buttonHit"
+        android:layout_alignLeft="@+id/buttonHit"
+        android:layout_alignStart="@+id/buttonHit"
+        android:id="@+id/buttonStand"
         android:onClick="buttonStand"
         />
+
+    <TextView
+        android:id="@+id/player_result_text"
+        android:textSize="25dp"
+        android:text=""
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_below="@+id/buttonStand"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="55dp" />
+
+    <TextView
+        android:id="@+id/dealer_result_text"
+        android:textSize="25dp"
+        android:layout_marginTop="55dp"
+        android:text=""
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_below="@+id/player_result_text"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="DEAL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonStand"
+        android:layout_alignLeft="@+id/buttonStand"
+        android:layout_alignStart="@+id/buttonStand"
+        android:id="@+id/buttonDeal"
+        android:onClick="buttonDeal" />
 
 
 </RelativeLayout>
