--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,5 +84,12 @@
         android:id="@+id/buttonDeal"
         android:onClick="buttonDeal" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/player_result_text"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView3" />
+
 
 </RelativeLayout>
