--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:text="@string/welcome_text"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"/>
 
     <!--<EditText-->
         <!--android:layout_width="wrap_content"-->
@@ -49,31 +50,6 @@
         android:onClick="buttonStand"
         />
 
-    <TextView
-        android:id="@+id/player_result_text"
-        android:textSize="25dp"
-        android:text=""
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_below="@+id/buttonStand"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="55dp" />
-
-    <TextView
-        android:id="@+id/dealer_result_text"
-        android:textSize="25dp"
-        android:layout_marginTop="55dp"
-        android:text=""
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_below="@+id/player_result_text"
-        android:layout_centerHorizontal="true" />
-
     <Button
         android:text="DEAL"
         android:layout_width="wrap_content"
@@ -90,7 +66,33 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/result_text" />
+        android:id="@+id/result_text"
+        android:textSize="20dp"/>
+
+    <TextView
+        android:id="@+id/player_result_text"
+        android:textSize="20dp"
+        android:text="Player Hand:"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_marginTop="41dp"
+        android:layout_below="@+id/buttonDeal"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/dealer_result_text"
+        android:textSize="20dp"
+        android:layout_marginTop="22dp"
+        android:text="Dealer Hand: "
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_below="@+id/player_result_text"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
