--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,46 +16,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/result_text"
-        android:textSize="20dp"
-        android:textColor="#ffffff"
-        android:background="#000000"
-        android:textStyle="bold"
-        android:layout_marginBottom="26dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/player_result_text"
-        android:textColor="#ffffff"
-        android:background="#000000"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/dealer_result_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:text="DEAL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonDeal"
-        android:onClick="buttonDeal"
-        android:background="#000000"
-        android:textColor="#ffffff"
-        android:layout_marginBottom="36dp"
-        android:layout_alignBottom="@+id/buttonStand"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/welcome_text"
         android:id="@+id/textView"
         android:textSize="35dp"
@@ -68,19 +28,49 @@
 
     <Button
         android:text="@string/stand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
         android:id="@+id/buttonStand"
         android:onClick="buttonStand"
         android:background="#000000"
         android:textColor="#ffffff"
-        android:layout_alignBaseline="@+id/buttonHit"
         android:layout_alignBottom="@+id/buttonHit"
-        android:layout_toRightOf="@+id/buttonDeal"
-        android:layout_toEndOf="@+id/buttonDeal"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp" />
+        android:layout_alignRight="@+id/player_result_text"
+        android:layout_alignEnd="@+id/player_result_text" />
 
+    <!--players hand-->
+    <TextView
+        android:id="@+id/player_result_text"
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_above="@+id/dealer_result_text"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <!--result win lose draw-->
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/result_text"
+        android:textSize="20dp"
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_marginBottom="45dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/dealer_result_text"
+        android:layout_alignEnd="@+id/dealer_result_text" />
+
+    <!--dealers hand-->
     <TextView
         android:id="@+id/dealer_result_text"
         android:textSize="20dp"
@@ -98,18 +88,29 @@
     <Button
         android:id="@+id/buttonHit"
         android:text="@string/hit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
         android:gravity="center"
         android:onClick="buttonHit"
         android:background="#000000"
         android:textColor="#ffffff"
-        android:layout_marginBottom="27dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginEnd="17dp"
         android:layout_above="@+id/player_result_text"
-        android:layout_toLeftOf="@+id/buttonDeal"
-        android:layout_toStartOf="@+id/buttonDeal" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/buttonStand"
+        android:layout_toLeftOf="@+id/buttonStand" />
+
+    <Button
+        android:text="DEAL"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:id="@+id/buttonDeal"
+        android:onClick="buttonDeal"
+        android:background="#000000"
+        android:textColor="#ffffff"
+        android:layout_marginTop="56dp"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
