--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,5 +112,15 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="11dp"
+        android:layout_marginEnd="11dp"
+        android:id="@+id/playerHand"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/buttonDeal"
+        android:layout_toStartOf="@+id/buttonDeal" />
+
 
 </RelativeLayout>
