--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.twentyone.MainActivity"
-    android:background="@drawable/blackjack">
+    android:background="@drawable/screenshot">
 
 
     <TextView
@@ -19,113 +19,122 @@
         android:text="@string/welcome_text"
         android:id="@+id/textView"
         android:textSize="35dp"
-        android:textColor="#ffffff"
-        android:background="#000000"
+        android:textColor="#000000"
+        android:background="#ffffff"
         android:textStyle="bold"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="31dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:text="DEAL"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:id="@+id/buttonDeal"
+        android:onClick="buttonDeal"
+        android:background="#cceada"
+        android:textColor="#000000"
+        android:layout_alignTop="@+id/textView"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:text="@string/stand"
-        android:layout_width="170dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="120dp"
         android:id="@+id/buttonStand"
         android:onClick="buttonStand"
-        android:background="#000000"
-        android:textColor="#ffffff"
-        android:layout_alignBottom="@+id/buttonHit"
-        android:layout_alignRight="@+id/player_result_text"
-        android:layout_alignEnd="@+id/player_result_text" />
+        android:background="#fcf7f9"
+        android:textColor="#000000"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:layout_above="@+id/player_result_text"
+        android:layout_toRightOf="@+id/buttonDeal"
+        android:layout_toEndOf="@+id/buttonDeal"/>
 
-    <!--players hand-->
+    <Button
+        android:id="@+id/buttonHit"
+        android:text="@string/hit"
+        android:layout_width="80dp"
+        android:layout_height="120dp"
+        android:gravity="center"
+        android:onClick="buttonHit"
+        android:textColor="#000000"
+        android:background="#fcf7f9"
+        android:layout_marginTop="68dp"
+        android:layout_below="@+id/textView"
+        android:layout_toLeftOf="@+id/textView"
+        android:layout_toStartOf="@+id/textView"
+        android:layout_marginRight="38dp"
+        android:layout_marginEnd="38dp"/>
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/result_text"
+        android:textSize="15dp"
+        android:textColor="#000000"
+        android:background="#ffd4aa"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_below="@+id/textView"
+        android:layout_alignLeft="@+id/buttonDeal"
+        android:layout_alignStart="@+id/buttonDeal"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:id="@+id/dealer_result_text"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:background="#fcf7f9"
+        android:textStyle="bold"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_above="@+id/dealer_hand_display"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/dealer_hand_display"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:background="#fcf7f9"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_marginBottom="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/dealer_result_text"
+        android:layout_alignStart="@+id/dealer_result_text"/>
+
+    <TextView
+        android:id="@+id/hand_display"
+        android:layout_height="wrap_content"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:textStyle="bold"
+        android:layout_width="250dp"
+        android:textAlignment="center"
+        android:layout_below="@+id/player_result_text"
+        android:layout_alignLeft="@+id/dealer_result_text"
+        android:layout_alignStart="@+id/dealer_result_text"/>
+
     <TextView
         android:id="@+id/player_result_text"
         android:textColor="#000000"
         android:background="#ffffff"
         android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_width="350dp"
+        android:textSize="13dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_weight="0.1"
-        android:layout_above="@+id/dealer_result_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <!--result win lose draw-->
-    <TextView
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/result_text"
-        android:textSize="20dp"
-        android:textColor="#000000"
-        android:background="#ffffff"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginBottom="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/dealer_result_text"
-        android:layout_alignEnd="@+id/dealer_result_text" />
-
-    <!--dealers hand-->
-    <TextView
-        android:id="@+id/dealer_result_text"
-        android:textSize="20dp"
-        android:textColor="#ffffff"
-        android:background="#000000"
-        android:textStyle="bold"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/result_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:id="@+id/buttonHit"
-        android:text="@string/hit"
-        android:layout_width="170dp"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:onClick="buttonHit"
-        android:background="#000000"
-        android:textColor="#ffffff"
-        android:layout_above="@+id/player_result_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/buttonStand"
-        android:layout_toLeftOf="@+id/buttonStand" />
-
-    <Button
-        android:text="DEAL"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:id="@+id/buttonDeal"
-        android:onClick="buttonDeal"
-        android:background="#000000"
-        android:textColor="#ffffff"
-        android:layout_marginTop="56dp"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/hand_display"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:textColor="#ffffff"
-        android:background="#000000"
-        android:textStyle="bold"
-        android:layout_width="350dp"
-        android:layout_marginBottom="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textAlignment="center"
-        />
+        android:layout_marginTop="62dp"
+        android:layout_below="@+id/buttonHit"
+        android:layout_alignLeft="@+id/hand_display"
+        android:layout_alignStart="@+id/hand_display"/>
 
 
 </RelativeLayout>
