--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,17 +39,15 @@
 
     <Button
         android:text="@string/stand"
-        android:layout_width="80dp"
+        android:layout_width="90dp"
         android:layout_height="120dp"
         android:id="@+id/buttonStand"
         android:onClick="buttonStand"
         android:background="#fcf7f9"
         android:textColor="#000000"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
         android:layout_above="@+id/player_result_text"
-        android:layout_toRightOf="@+id/buttonDeal"
-        android:layout_toEndOf="@+id/buttonDeal"/>
+        android:layout_toRightOf="@+id/result_text"
+        />
 
     <Button
         android:id="@+id/buttonHit"
@@ -63,15 +61,15 @@
         android:layout_marginTop="68dp"
         android:layout_below="@+id/textView"
         android:layout_toLeftOf="@+id/textView"
-        android:layout_toStartOf="@+id/textView"
         android:layout_marginRight="38dp"
-        android:layout_marginEnd="38dp"/>
+        android:layout_marginEnd="38dp"
+        />
 
     <TextView
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:id="@+id/result_text"
-        android:textSize="15dp"
+        android:textSize="13dp"
         android:textColor="#000000"
         android:background="#ffd4aa"
         android:textAlignment="center"
@@ -80,6 +78,54 @@
         android:layout_alignLeft="@+id/buttonDeal"
         android:layout_alignStart="@+id/buttonDeal"
         android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:id="@+id/hand_display"
+        android:layout_height="wrap_content"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:textStyle="bold"
+        android:layout_width="250dp"
+        android:textAlignment="center"
+        android:layout_below="@+id/player_result_text"
+        android:layout_alignRight="@+id/buttonStand"
+        android:layout_alignEnd="@+id/buttonStand"
+        android:layout_alignLeft="@+id/player_result_text"
+        android:layout_alignStart="@+id/player_result_text"/>
+
+    <TextView
+        android:id="@+id/player_result_text"
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:textStyle="bold"
+        android:textSize="13dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_marginTop="56dp"
+        android:layout_below="@+id/buttonHit"
+        android:layout_alignRight="@+id/buttonStand"
+        android:layout_alignEnd="@+id/buttonStand"
+        android:layout_alignLeft="@+id/buttonHit"
+        android:layout_alignStart="@+id/buttonHit"/>
+
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/dealer_hand_display"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:background="#fcf7f9"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_marginBottom="41dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/buttonStand"
+        android:layout_alignEnd="@+id/buttonStand"
+        android:layout_alignLeft="@+id/dealer_result_text"
+        android:layout_alignStart="@+id/dealer_result_text"/>
 
     <TextView
         android:id="@+id/dealer_result_text"
@@ -92,47 +138,8 @@
         android:textAlignment="center"
         android:layout_weight="0.1"
         android:layout_above="@+id/dealer_hand_display"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/dealer_hand_display"
-        android:textSize="13dp"
-        android:textColor="#000000"
-        android:background="#fcf7f9"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_marginBottom="35dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/dealer_result_text"
-        android:layout_alignStart="@+id/dealer_result_text"/>
-
-    <TextView
-        android:id="@+id/hand_display"
-        android:layout_height="wrap_content"
-        android:textSize="13dp"
-        android:textColor="#000000"
-        android:background="#ffffff"
-        android:textStyle="bold"
-        android:layout_width="250dp"
-        android:textAlignment="center"
-        android:layout_below="@+id/player_result_text"
-        android:layout_alignLeft="@+id/dealer_result_text"
-        android:layout_alignStart="@+id/dealer_result_text"/>
-
-    <TextView
-        android:id="@+id/player_result_text"
-        android:textColor="#000000"
-        android:background="#ffffff"
-        android:textStyle="bold"
-        android:textSize="13dp"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_marginTop="62dp"
-        android:layout_below="@+id/buttonHit"
+        android:layout_alignRight="@+id/buttonStand"
+        android:layout_alignEnd="@+id/buttonStand"
         android:layout_alignLeft="@+id/hand_display"
         android:layout_alignStart="@+id/hand_display"/>
 
