--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.twentyone.MainActivity"
-    android:background="@drawable/screenshot">
+    android:background="@drawable/screenpink">
 
 
     <TextView
@@ -71,7 +71,7 @@
         android:id="@+id/result_text"
         android:textSize="13dp"
         android:textColor="#000000"
-        android:background="#ffd4aa"
+        android:background="#fcf0f5"
         android:textAlignment="center"
         android:textStyle="bold"
         android:layout_below="@+id/textView"
