--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,50 +34,54 @@
         android:onClick="buttonDeal"
         android:background="#cceada"
         android:textColor="#000000"
-        android:layout_alignTop="@+id/textView"
+        android:layout_alignBaseline="@+id/textView"
+        android:layout_alignBottom="@+id/textView"
         android:layout_centerHorizontal="true"/>
 
     <Button
         android:text="@string/stand"
-        android:layout_width="90dp"
-        android:layout_height="120dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/buttonStand"
         android:onClick="buttonStand"
-        android:background="#fcf7f9"
+        android:background="#cceada"
         android:textColor="#000000"
-        android:layout_above="@+id/player_result_text"
-        android:layout_toRightOf="@+id/result_text"
-        />
-
-    <Button
-        android:id="@+id/buttonHit"
-        android:text="@string/hit"
-        android:layout_width="80dp"
-        android:layout_height="120dp"
-        android:gravity="center"
-        android:onClick="buttonHit"
-        android:textColor="#000000"
-        android:background="#fcf7f9"
-        android:layout_marginTop="68dp"
-        android:layout_below="@+id/textView"
-        android:layout_toLeftOf="@+id/textView"
-        android:layout_marginRight="38dp"
-        android:layout_marginEnd="38dp"
-        />
+        android:layout_alignBaseline="@+id/buttonHit"
+        android:layout_alignBottom="@+id/buttonHit"
+        android:layout_toRightOf="@+id/buttonDeal"
+        android:layout_toEndOf="@+id/buttonDeal"/>
 
     <TextView
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:id="@+id/result_text"
+        android:id="@+id/player_result_text"
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:textStyle="bold"
+        android:textSize="13dp"
+        android:layout_width="265dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_marginTop="97dp"
+        android:layout_below="@+id/buttonStand"
+        android:layout_alignLeft="@+id/buttonHit"
+        android:layout_alignStart="@+id/buttonHit"/>
+
+    <TextView
+        android:id="@+id/dealer_result_text"
         android:textSize="13dp"
         android:textColor="#000000"
-        android:background="#fcf0f5"
-        android:textAlignment="center"
+        android:background="#fcf7f9"
         android:textStyle="bold"
-        android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/buttonDeal"
-        android:layout_alignStart="@+id/buttonDeal"
-        android:layout_marginTop="20dp"/>
+        android:layout_width="265dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_weight="0.1"
+        android:layout_above="@+id/dealer_hand_display"
+        android:layout_alignLeft="@+id/dealer_hand_display"
+        android:layout_alignStart="@+id/dealer_hand_display"
+        android:layout_marginBottom="11dp"
+        android:layout_alignRight="@+id/result_text"
+        android:layout_alignEnd="@+id/result_text"/>
 
     <TextView
         android:id="@+id/hand_display"
@@ -86,33 +90,14 @@
         android:textColor="#000000"
         android:background="#ffffff"
         android:textStyle="bold"
-        android:layout_width="250dp"
+        android:layout_width="265dp"
         android:textAlignment="center"
         android:layout_below="@+id/player_result_text"
-        android:layout_alignRight="@+id/buttonStand"
-        android:layout_alignEnd="@+id/buttonStand"
         android:layout_alignLeft="@+id/player_result_text"
         android:layout_alignStart="@+id/player_result_text"/>
 
     <TextView
-        android:id="@+id/player_result_text"
-        android:textColor="#000000"
-        android:background="#ffffff"
-        android:textStyle="bold"
-        android:textSize="13dp"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_marginTop="56dp"
-        android:layout_below="@+id/buttonHit"
-        android:layout_alignRight="@+id/buttonStand"
-        android:layout_alignEnd="@+id/buttonStand"
-        android:layout_alignLeft="@+id/buttonHit"
-        android:layout_alignStart="@+id/buttonHit"/>
-
-    <TextView
-        android:layout_width="250dp"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
         android:id="@+id/dealer_hand_display"
         android:textSize="13dp"
@@ -120,28 +105,41 @@
         android:background="#fcf7f9"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_marginBottom="41dp"
+        android:layout_marginBottom="43dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/buttonStand"
-        android:layout_alignEnd="@+id/buttonStand"
-        android:layout_alignLeft="@+id/dealer_result_text"
-        android:layout_alignStart="@+id/dealer_result_text"/>
+        android:layout_alignLeft="@+id/hand_display"
+        android:layout_alignStart="@+id/hand_display"
+        android:layout_alignRight="@+id/result_text"
+        android:layout_alignEnd="@+id/result_text"/>
 
     <TextView
-        android:id="@+id/dealer_result_text"
+        android:layout_width="265dp"
+        android:layout_height="20dp"
+        android:id="@+id/result_text"
         android:textSize="13dp"
         android:textColor="#000000"
-        android:background="#fcf7f9"
-        android:textStyle="bold"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:background="#fcf0f5"
         android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/dealer_hand_display"
-        android:layout_alignRight="@+id/buttonStand"
-        android:layout_alignEnd="@+id/buttonStand"
-        android:layout_alignLeft="@+id/hand_display"
-        android:layout_alignStart="@+id/hand_display"/>
+        android:textStyle="bold"
+        android:layout_marginTop="26dp"
+        android:layout_below="@+id/buttonDeal"
+        android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:id="@+id/buttonHit"
+        android:text="@string/hit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:onClick="buttonHit"
+        android:textColor="#000000"
+        android:background="#cceada"
+        android:layout_marginTop="81dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:layout_below="@+id/result_text"
+        android:layout_alignLeft="@+id/result_text"
+        android:layout_alignStart="@+id/result_text"/>
 
 
 </RelativeLayout>
